# hoshizora

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  setup.py
src/hoshizora/: cli.cpp  main.cpp  pybind.cpp
src/hoshizora/app/: apps.h  clustering_louvain.h  pagerank.h
src/hoshizora/core/: bulksync_gas_executor.h  bulksync_thread_pool.h  colle.h  condition_variable_barrier.h  executor.h  graph.h  includes.h  io.h  kernel.h  loop.h  numa_allocator.h  primitive_includes.h  spin_barrier.h  thread_pool.h
src/hoshizora/core/allocator/: allocator.h  sharedmemoryallocator.h
src/hoshizora/core/api/: kernel.h
src/hoshizora/core/compress/: common.h  external.h  multiple.h  multiple_decode.h  multiple_encode.h  single.h  single_decode.h  single_encode.h
src/hoshizora/core/dispatcher/: bulksyncdispatcher.h  dispatcher.h
src/hoshizora/core/executor/: bulksync_gas_executor.h  executor.h
src/hoshizora/core/io/: io.h
src/hoshizora/core/model/: graph.h
src/hoshizora/core/util/: bulksync_thread_pool.h  colle.h  condition_variable_barrier.h  includes.h  loop.h  numa_allocator.h  primitive_includes.h  sense_reversing_barrier.h  spin_barrier.h  thread_pool.h
